ensure tags are not cutoff on homepage

--- a/app/assets/stylesheets/extensions/directory.scss
+++ b/app/assets/stylesheets/extensions/directory.scss
@@ -54,12 +54,9 @@
 
 .extension_tag {
   border: 1px solid #4f657f;
-  border-radius: 3px;
-  padding: 3px;
-  margin-right: 3px;
-  a {
-    margin-right: 0 !important;
-  }
+  border-radius: $button-radius;
+  padding: 0 0.125rem;
+  margin-right: 0 0.125rem 0.125rem 0;
 }
 
 .extensions_columns {
