--- a/app/assets/stylesheets/variables.scss
+++ b/app/assets/stylesheets/variables.scss
@@ -31,6 +31,7 @@ $row-width: 100%;
 $column-gutter: rem-calc(30);
 $total-columns: 12;
 $max-width: 1400px;
+$button-radius: rem-calc(4);
 
 // Media Query Breaks
 $mobile-range: (0em, 32em);
